Added phone number, also to its correct places. Fixed Request Evaluation. Evaluation list now shows what contact method.

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #3274d6;
+    background-color: #2f3947;
     color: #ffffff;
 }
 .login form input[type="password"], .login form input[type="text"] {
@@ -47,7 +47,7 @@ body {
     width: 100%;
     padding: 15px;
    margin-top: 20px;
-    background-color: #3274d6;
+    background-color: #2f3947;
     border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -59,7 +59,7 @@ body {
     width: 100%;
     padding: 15px;
    margin-top: 20px;
-    background-color: #3274d6;
+    background-color: #2f3947;
     border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -68,7 +68,12 @@ body {
 }
 
 .login form input[type="submit"]:hover {
-  background-color: #2868c7;
+  background-color: #2f3947;
+    transition: background-color 0.2s;
+}
+
+.login select {
+  background-color: #2f3947;
     transition: background-color 0.2s;
 }
 
@@ -168,7 +173,7 @@ body.loggedin {
     align-items: center;
     width: 50px;
    height: 50px;
-    background-color: #3274d6;
+    background-color: #2f3947;
     color: #ffffff;
 }
 .register form input[type="password"], .register form input[type="text"], .register form input[type="email"] {
@@ -182,7 +187,7 @@ body.loggedin {
     width: 100%;
     padding: 15px;
     margin-top: 20px;
-    background-color: #3274d6;
+    background-color: #2f3947;
    border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -190,7 +195,7 @@ body.loggedin {
     transition: background-color 0.2s;
 }
 .register form input[type="submit"]:hover {
-  background-color: #2868c7;
+  background-color: #2f3947;
     transition: background-color 0.2s;
 }
 
