--- a/style.css
+++ b/style.css
@@ -59,11 +59,23 @@ body {
     width: 100%;
     padding: 15px;
    margin-top: 20px;
-    background-color: #2f3947;
+	background: linear-gradient(90deg, blue 0% 25% , red 25% 50% ,yellow 50% 75%, green 75% 100%);
     border: 0;
     cursor: pointer;
     font-weight: bold;
-    color: #ffffff;
+    color: #000000;
+    transition: background-color 0.2s;
+}
+
+#facebook {
+    width: 100%;
+    padding: 15px;
+   margin-top: 20px;
+    background-color: blue;
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #000000;
     transition: background-color 0.2s;
 }
 
