--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,7 @@ table {
 			}
 			.security_questions.login select {
 				display: inline-block;
+  				background-color: #8d9aac;
 				width: 310px;
 				height: 50px;
 				border: 1px solid #dee0e4;
